--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ tokio = { version = "1", features = ["full"] }
 druid = "0.8.0"
 walkdir = "2"
 msgpacker = "0.4.3"
+searchlight = "0.3.1"
+hostname = "0.3.1"
+local-ip-address = "0.5.2"
