--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-druid = "0.8.0"
+druid = "0.8.3"
+druid-derive = "0.5.1"
 walkdir = "2"
 msgpacker = "0.4.3"
 searchlight = "0.3.1"
 hostname = "0.3.1"
 local-ip-address = "0.5.2"
+human_bytes = "0.4.2"
