--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,12 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-druid = "0.8.3"
-druid-derive = "0.5.1"
+druid = { version = "0.8.3", features=["im"] }
+# druid-derive = "0.5.1"
 walkdir = "2"
 msgpacker = "0.4.3"
 searchlight = "0.3.1"
 hostname = "0.3.1"
 local-ip-address = "0.5.2"
 human_bytes = "0.4.2"
+clipboard = "0.5.0"
