--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.release]
+opt-level = 3
+strip = true
+lto = true
+codegen-units = 1
+
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 druid = { version = "0.8.3", features=["im"] }
