--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,18 @@ edition = "2021"
 
 [profile.release]
 opt-level = 3
-strip = true
-lto = true
-codegen-units = 1
+# strip = true
+# lto = true
+# codegen-units = 1
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 druid = { version = "0.8.3", features=["im"] }
 tray-item = "0.8.0"
 walkdir = "2"
-msgpacker = "0.4.3"
+serde = { version = "1.0", features = ["derive"] }
+rmp = "0.8.12"
+rmp-serde = "1.1.2"
 searchlight = "0.3.1"
 hostname = "0.3.1"
 local-ip-address = "0.5.2"
