--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ local-ip-address = "0.5.2"
 human_bytes = "0.4.2"
 clipboard = "0.5.0"
 home = "0.5.5"
+log = "0.4.21"
 
 [build-dependencies]
 windres = "*"
