--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ human_bytes = "0.4.2"
 clipboard = "0.5.0"
 home = "0.5.5"
 log = "0.4.21"
+simple_logger = "4.3.3"
 
 [build-dependencies]
 windres = "*"
